fixed spacing in tag-selector-filter

--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -9,7 +9,7 @@
 		border: var(--material-border-quinary);
 		color: var(--fill-primary);
 		flex: 1 0;
-		margin: 6px 4px;
+		margin: 6px 0px;
 		min-width: 40px;
 		padding: 3px 7px;
 	
