--- a/scss/components/_tagSelector.scss
+++ b/scss/components/_tagSelector.scss
@@ -58,6 +58,7 @@
 	display: flex;
 	flex-direction: row;
 	flex: 0 0 1em;
+	gap: 4px;
 }
 
 .tag-selector-filter-container .search {
